--- a/css/widgets.css
+++ b/css/widgets.css
@@ -1,3 +1,9 @@
+.ly-FullHeight {
+  &, body {
+    height: 100%;
+    margin: 0;
+  }
+}
 .wg-BodyDark {
   height: 100%;
   background: #2f2f2f;
@@ -5,7 +11,6 @@
 }
 
 .ly-Centered {
-  max-width: 800px;
   margin: auto;
 }
 
